--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Lorem ipsum</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+        <meta name="viewport" context="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="header">
